--- a/Client/wwwroot/css/buttons.css
+++ b/Client/wwwroot/css/buttons.css
@@ -1,3 +1,7 @@
+body button {
+  color: inherit;
+}
+
 .btn, a.btn, .btn-select {
   font-size: 0.9rem !important;
   height: var(--input-height, 2.1875rem);
